# jupyterlab-codex

./: .gitignore  .npmignore  AGENTS.md  README.md  install_dev.sh  package.json  playwright.config.cjs  playwright.unit.config.cjs  pyproject.toml  release.sh  run_dev.sh  run_jupyterlab_codex.sh  tsconfig.json  webpack.config.js
.github/workflows/: unit-tests.yml
jupyterlab_codex/: __init__.py  cli_defaults.py  handlers.py  protocol.py  runner.py  server_extension.py  sessions.py
jupyterlab_codex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
release-dist/: jupyterlab_codex_sidebar-0.1.2-py3-none-any.whl
scripts/: run_jupyterlab_codex.sh  run_playwright_e2e.sh  run_playwright_freeze_repro.sh  run_playwright_queue_repro.sh  run_playwright_repro.sh
src/: codexChat.tsx  codexChatAttachmentDedup.ts  codexChatAttachmentLimit.ts  codexChatAttachmentState.ts  codexChatDocumentUtils.ts  codexChatFormatting.ts  codexChatNotice.ts  codexChatPersistence.ts  codexChatPrimitives.tsx  codexChatRender.tsx  codexChatSessionFactory.ts  codexChatSessionKey.ts  codexChatStorage.ts  codexSessionResolver.ts  index.ts  panel.tsx  protocol.ts
src/handlers/: activitySummarizer.ts  codexMessageTypes.ts  codexMessageUtils.ts  handleCodexSocketMessage.ts  sessionSyncHandler.ts
src/hooks/: useCodexSocket.ts
style/: index.css
tests/: test_handlers.py  test_protocol.py  test_session_store_limits.py
tests/e2e/: cell-output-error-tail.spec.js  codex-ui-test-helpers.js  freeze-notebook-tabs-repro.spec.js  mock-codex-cli-flood.py  mock-codex-cli-prompt-echo.py  mock-codex-cli.py  (+1 more)
(+21 files in other folders)
