[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-codex"
version = "0.1.0"
description = "JupyterLab Codex sidebar with server extension"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jupyterlab>=4,<5",
  "jupyter_server>=2,<3",
]
license = {text = "BSD-3-Clause"}
authors = [{name = "ILHO AHN"}]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/oy-ilho/jupyterlab-codex"
Repository = "https://github.com/oy-ilho/jupyterlab-codex"
Issues = "https://github.com/oy-ilho/jupyterlab-codex/issues"

[project.entry-points."jupyter_server.extension"]
jupyterlab_codex = "jupyterlab_codex.server_extension"

[tool.setuptools]
packages = ["jupyterlab_codex"]
include-package-data = true

[tool.setuptools.package-data]
"jupyterlab_codex" = ["labextension/**"]

[tool.setuptools.data-files]
"etc/jupyter/jupyter_server_config.d" = ["jupyter-config/jupyter_server_config.d/jupyterlab_codex.json"]
"share/jupyter/labextensions/jupyterlab-codex" = [
  "jupyterlab_codex/labextension/package.json",
  "jupyterlab_codex/labextension/install.json",
]
"share/jupyter/labextensions/jupyterlab-codex/static" = ["jupyterlab_codex/labextension/static/*"]
